Fixed too big border radius in gecko < 12

--- a/static.getnightingale.com/css/general.css
+++ b/static.getnightingale.com/css/general.css
@@ -44,7 +44,7 @@ body {
 	
 	#ngalemainhead nav .menu {
 		border-radius: 5px;
-		-moz-border-radius: 10px;
+		-moz-border-radius: 5px;
 		overflow: hidden;
 	}
 	
